--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
                 <span class="fa fa-star checked"></span> <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span> <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span></h1>
-              <div class="modal" tabindex="-1">
+                <span class="fa fa-star checked"></span>
+               <div class="modal" tabindex="-1">
   <div class="modal-dialog">
     <div class="modal-content">
       
@@ -83,6 +83,8 @@
     </div>
   </div>
 </div>
+              </h1>
+             
 
             </div>
             <div class="row mt-5 mb-3 mx-auto text-center">
@@ -159,24 +161,27 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="images/exp01.jpg" class="d-block w-100" class="img-fluid" alt="experience">
+      <img src="images/exp01.JPG" class="d-block w-100" class="img-fluid" alt="experience">
       <div class="carousel-caption d-none d-md-block">
         <h5>อักษราวิชาการ</h5>
-        <p>มีส่วนร่วมในการจัดงานการประกวดอินโฟกราฟฟิก ฝ่ายศิลป์และฝ่ายประชาสัมพันธ์</p>
+        <p>มีส่วนร่วมในการจัดงานการประกวดอินโฟกราฟฟิก 
+ทำหน้าที่ฝ่ายศิลป์และฝ่ายประชาสัมพันธ์</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src=" images/exp02.jpg" class="d-block w-100" class="img-fluid" alt="experience">
+      <img src=" images/exp02.JPG" class="d-block w-100" class="img-fluid" alt="experience">
       <div class="carousel-caption d-none d-md-block">
         <h5>อักษราวิชาการ</h5>
-        <p>มีส่วนร่วมในการจัดงานการประกวดอินโฟกราฟฟิก ฝ่ายศิลป์และฝ่ายประชาสัมพันธ์</p>
+        <p>มีส่วนร่วมในการจัดงานการประกวดอินโฟกราฟฟิก 
+ทำหน้าที่ฝ่ายศิลป์และฝ่ายประชาสัมพันธ์</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src=" images/exp03.jpg" class="d-block w-100" class="img-fluid" alt="experience">
+      <img src=" images/exp03.JPG" class="d-block w-100" class="img-fluid" alt="experience">
       <div class="carousel-caption d-none d-md-block">
         <h5>อักษราวิชาการ</h5>
-        <p>มีส่วนร่วมในการจัดงานการประกวดอินโฟกราฟฟิก ฝ่ายศิลป์และฝ่ายประชาสัมพันธ์</p>
+        <p>มีส่วนร่วมในการจัดงานการประกวดอินโฟกราฟฟิก 
+ทำหน้าที่ฝ่ายศิลป์และฝ่ายประชาสัมพันธ์</p>
       </div>
     </div>
   </div>
