--- a/index.html
+++ b/index.html
@@ -153,6 +153,9 @@
               <h4> DIY crafts, crochet, and reading </h4>
             </div>
           </div>
+          <br>
+          <br>
+          <br>
           <div class="col-md-6 auto-mx-0 mt-5"><div id="carouselExampleCaptions" class="carousel slide">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -161,6 +164,7 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
+      <span class="border border-black border-4"></span>
       <img src="images/exp01.JPG" class="d-block w-100" class="img-fluid" alt="experience">
       <div class="carousel-caption d-none d-md-block">
         <h5>อักษราวิชาการ</h5>
