--- a/index.html
+++ b/index.html
@@ -158,14 +158,14 @@
           <br>
           <div class="col-md-6 auto-mx-0 mt-5">
             <div id="carouselExampleCaptions" class="carousel slide">
-              <span class="border border-black border-4"></span>
+              
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
   </div>
   <div class="carousel-inner">
-    <div class="carousel-item active">
+    <div class="carousel-item active" class="border border-black border-4">
       
       <img src="images/exp01.JPG" class="d-block w-100" class="img-fluid" alt="experience">
       <div class="carousel-caption d-none d-md-block">
