--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
   </div>
   <div class="carousel-inner">
-    <div class="carousel-item active" class="border border-black border-4">
+    <div class="carousel-item active" >
       
-      <img src="images/exp01.JPG" class="d-block w-100" class="img-fluid" alt="experience">
+      <img src="images/exp01.JPG" class="d-block w-100" class="img-fluid" alt="experience" class="border border-black border-4>
       <div class="carousel-caption d-none d-md-block">
         <h5>อักษราวิชาการ</h5>
         <p>มีส่วนร่วมในการจัดงานการประกวดอินโฟกราฟฟิก 
@@ -175,7 +175,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src=" images/exp02.JPG" class="d-block w-100" class="img-fluid" alt="experience">
+      <img src=" images/exp02.JPG" class="d-block w-100" class="img-fluid" alt="experience" class="border border-black border-4>
       <div class="carousel-caption d-none d-md-block">
         <h5>อักษราวิชาการ</h5>
         <p>มีส่วนร่วมในการจัดงานการประกวดอินโฟกราฟฟิก 
@@ -183,7 +183,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src=" images/exp03.JPG" class="d-block w-100" class="img-fluid" alt="experience">
+      <img src=" images/exp03.JPG" class="d-block w-100" class="img-fluid" alt="experience" class="border border-black border-4>
       <div class="carousel-caption d-none d-md-block">
         <h5>อักษราวิชาการ</h5>
         <p>มีส่วนร่วมในการจัดงานการประกวดอินโฟกราฟฟิก 
