--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
             <div class="modal" tabindex="-1">
   <div class="modal-dialog">
     <div class="modal-content">
-      
+      <div class="modal-header">
+        <h5 class="modal-title">5 stars for what?</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
       <div class="modal-body">
         <p> cooking like a chef i'm a 5 star michelin~ </p>
       </div>
