--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </div>
     </div>
   </div>
-</div></div>
+</div>
           <div class="col-md-8">
             <div class="row mt-5 mb-3 mx-auto text-center ">
               
