--- a/index.html
+++ b/index.html
@@ -195,23 +195,23 @@
           </div>
           <div class="row mt-3">
             
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-  click here to find sth fun
+<button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#exampleModal">
+ TMI
 </button>
 
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">something fun???</h1>
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Too Much Information</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        SORRY, NOTHING!
+        มีความสนใจในงานออกแบบดิจิทัล เช่น การออกแบบอินโฟกราฟฟิก โปสเตอร์ พรีเซนเทชัน 
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">bye, guys~</button>
+        <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
+        
       </div>
     </div>
   </div>
